--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,30 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+/* .card-text {
+  height: 50px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: block;
+} */
+
+.btn-outline-primary {
+  /* position: absolute;
+  bottom: 15px; */
+  color: #316bb8;
+  border-color: #316bb8;
+}
+
+.btn-outline-primary :hover {
 }
